Fix menu z-index

--- a/src/stylesheets/layouts/_menu.scss
+++ b/src/stylesheets/layouts/_menu.scss
@@ -9,6 +9,7 @@
   flex-direction: row;
 
   transform: translateX(-50%);
+  z-index: 1;
 
   &-item {
     display: block;
